# MEROP

./: README.md  install.sh
experiment_record/: CMakeLists.txt
experiment_record/launch/: recordBags.launch
experiment_record/msg/: RecData.msg
experiment_record/src/: merop_rosbag_node.py  merop_rosbag_node_BCKP.py  record_topics.txt
feedback/: CMakeLists.txt  package.xml  setup.py
feedback/config/: config_fake_data.yaml  merop.yaml  traction_detection.yaml
feedback/launch/: .imagetov4l2.launch.swp  .imagetov4l2loop.launch.swp  amadee20.launch  amadee20_rosbridge.launch  fakedata.launch  imagetov4l2loop.launch  joy.launch  laser_to_pose.launch  traction_detection.launch  transform_imu.launch  twist.launch
feedback/scripts/: checkImageNodes.sh  dockerScript.sh  fake_data_publisher_node  imageconversion.sh  imagetov4l2.sh  merop-fakedata.service  merop-imageConv.service  merop-nodes.service  merop-recordbag.service  node_fakedata.sh  recordRosbag.sh  restartImage.sh  roscore-merop  rosnodes.sh  showImagesDev.sh  startVM.sh  traction_detector_node
feedback/src/: fake_data_publisher.py  fake_data_publisher_bkp.py  test.py  traction_detector.py  transformed_imu_publisher.py
image_2_dev_video/: CMakeLists.txt  package.xml  setup.py
image_2_dev_video/ros/config/: hazard_back.yaml  hazard_front.yaml  stereo_left.yaml  stereo_right.yaml
image_2_dev_video/ros/launch/: image_2_dev_video.launch
image_2_dev_video/ros/scripts/: image_2_dev_video_node
image_2_dev_video/ros/src/image_2_dev_video_ros/: image_2_dev_video_node.py
map_to_img/src/: MapToImage.py
(+6 files in other folders)
