<?xml version="1.0"?>
<package>
 <name>image_2_dev_video</name>
 <version>1.0.0</version>
 <description>
 TODO!
 </description>

 <license>GPLv3</license>

 <author email="rute.luz@tecnico.ulisboa.pt">Rute Luz</author>
 <maintainer email="rute.luz@tecnico.ulisboa.pt">Rute Luz</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>TODO</build_depend>

 <run_depend>TODO</run_depend>

</package>
